# flavio

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: Pages.yml  Publish.yml  Test.yml  crates.io.yml  pages.yml  publish.yml  test.yml
docs/: book.toml
docs/book/: 404.html  flavio.html  index.html  print.html  searchindex.js  searchindex.json
docs/src/: SUMMARY.md  constitutive.md  home.md  installation.md
docs/src/constitutive/: hyperelastic.md  multiplicative_decomposition.md
docs/src/constitutive/hyperelastic/: arruda-boyce.md  gent.md  mooney-rivlin.md  neo-hookean.md  yeoh.md
src/: lib.rs  main.rs  test.rs
src/constitutive/: mod.rs  test.rs
src/constitutive/cohesive/: mod.rs  test.rs
src/constitutive/cohesive/smith_ferrante/: mod.rs  test.rs
src/constitutive/elastic/: mod.rs  test.rs
src/constitutive/elastic/almansi_hamel/: mod.rs  test.rs
src/constitutive/fluid/: mod.rs
src/constitutive/fluid/plastic/: mod.rs
src/constitutive/fluid/viscous/: mod.rs
src/constitutive/hybrid/: mod.rs
src/constitutive/hybrid/elastic/: test.rs
src/constitutive/hybrid/hyperelastic/: test.rs
src/constitutive/hyperelastic/: mod.rs  test.rs
src/constitutive/hyperelastic/additive_decomposition/: mod.rs  test.rs
src/constitutive/hyperelastic/almansi_hamel/: mod.rs  (+1 more)
src/constitutive/multiphysics/: mod.rs
src/constitutive/solid/: mod.rs
src/constitutive/thermal/: mod.rs
src/constitutive/thermoelastic/: mod.rs  test.rs
src/constitutive/thermohyperelastic/: mod.rs  test.rs
src/fem/: mod.rs  test.rs
src/fem/block/: mod.rs  test.rs
src/math/: mod.rs  test.rs
src/math/integrate/: mod.rs  test.rs
src/math/matrix/: mod.rs
src/math/optimize/: mod.rs  test.rs
src/math/solve/: mod.rs  test.rs
src/math/special/: mod.rs  test.rs
src/math/tensor/: mod.rs  test.rs
src/mechanics/: mod.rs  test.rs
src/mechanics/scalar/: mod.rs  test.rs
src/mechanics/tensor/: mod.rs
src/mechanics/vector/: mod.rs  test.rs
tests/: constitutive.rs  math.rs  mechanics.rs  plots.rs  temp.rs  temporary.rs
(+163 files in other folders)
