[package]
authors = ["Michael Robert Buche <dev@mrbuche.com>"]
categories = ["mathematics", "science"]
description = "flavio welcomes you"
documentation = "https://docs.rs/crate/flavio"
edition = "2021"
homepage = "https://github.com/mrbuche/flavio"
keywords = ["flavio", "mrbuche"]
license = "BSD-3-Clause"
name = "flavio"
repository = "https://github.com/mrbuche/flavio"
version = "0.3.8"

[dependencies]
plotpy = { version = "0.5.1", optional = true }

[features]
constitutive = ['mechanics']
doc = ['dep:plotpy', 'fem']
fem = ['constitutive']
math = []
mechanics = ['math']

[package.metadata.docs.rs]
features = ["doc"]
rustdoc-args = ["--html-in-header", ".github/katex.html"]
