[package]
authors = ["Michael R. Buche <dev@mrbuche.com>"]
categories = ["mathematics", "science"]
description = "flavio welcomes you"
documentation = "https://docs.rs/crate/flavio"
edition = "2021"
homepage = "https://github.com/mrbuche/flavio"
keywords = ["flavio", "mrbuche"]
license = "BSD-3-Clause"
name = "flavio"
repository = "https://github.com/mrbuche/flavio"
version = "0.4.8"

[features]
constitutive = ['mechanics']
fem = ['constitutive']
math = []
mechanics = ['math']

[package.metadata.docs.rs]
features = ["fem"]
rustdoc-args = ["--html-in-header", ".github/katex.html"]

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = "symbols"
